--- a/Addons/Entitas.Blueprints.Unity/Entitas.Blueprints.Unity.csproj
+++ b/Addons/Entitas.Blueprints.Unity/Entitas.Blueprints.Unity.csproj
@@ -7,9 +7,9 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Entitas.Blueprints.Unity</RootNamespace>
     <AssemblyName>Entitas.Blueprints.Unity</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <ReleaseVersion>1.0.0</ReleaseVersion>
-    <LangVersion>4</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
