Migrate tests to Shouldy
# Conflicts:
#	Addons/Entitas.Migration.CLI/Entitas.Migration.CLI.csproj
#	Tests/Tests/Tests.csproj
#	Tests/Tests/Tests/Entitas.CodeGeneration/DataProviders/describe_ComponentDataProvider.cs
#	Tests/Tests/Tests/Entitas.CodeGeneration/DataProviders/describe_ContextDataProvider.cs
#	Tests/Tests/Tests/Entitas.CodeGeneration/DataProviders/describe_EntityIndexDataProvider.cs
#	Tests/Tests/Tests/Entitas.CodeGeneration/describe_CodeGeneratorExtentions.cs
#	Tests/Tests/Tests/Entitas/describe_Systems.cs
#	Tests/Tests/Tests/TestExtensions.cs
#	Tests/Tests/Tests/check_namespaces.cs

--- a/Tests/Tests/Tests.csproj
+++ b/Tests/Tests/Tests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Addons\Entitas.Blueprints\Entitas.Blueprints.csproj" />
+    <ProjectReference Include="..\..\Addons\Entitas.CodeGeneration.Plugins\Entitas.CodeGeneration.Plugins.csproj" />
     <ProjectReference Include="..\..\Addons\Entitas.Migration\Entitas.Migration.csproj" />
     <ProjectReference Include="..\..\Addons\Entitas.VisualDebugging.Unity\Entitas.VisualDebugging.Unity.csproj" />
     <ProjectReference Include="..\..\Entitas\Entitas.csproj" />
