--- a/Addons/Entitas.VisualDebugging.Unity/Entitas.VisualDebugging.Unity.csproj
+++ b/Addons/Entitas.VisualDebugging.Unity/Entitas.VisualDebugging.Unity.csproj
@@ -1,17 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\Libraries\UnityEngine.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\Entitas\Entitas.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Entitas\Entitas.csproj" />
+    <Reference Include="$(UnityEngine)" />
   </ItemGroup>
 
 </Project>
