--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,46 @@
 <Project>
+
   <PropertyGroup>
-    <OutDir>bin\$(Configuration)\</OutDir>
-    <LangVersion>latest</LangVersion>
+    <DefaultTargetFramework>netstandard2.0</DefaultTargetFramework>
+    <DefaultNetTargetFramework>net472</DefaultNetTargetFramework>
+    <LangVersion>9</LangVersion>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <DebugType>none</DebugType>
+
+  <ItemGroup Label="NuGet">
+    <None Include="..\..\..\icon.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
+  <PropertyGroup Label="Docker">
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(MSBuildProjectDirectory)/obj/**/*</DefaultItemExcludes>
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(MSBuildProjectDirectory)/bin/**/*</DefaultItemExcludes>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(DOTNET_RUNNING_IN_CONTAINER)' == 'true'">
+    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/obj/container/</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildProjectDirectory)/bin/container/</BaseOutputPath>
+  </PropertyGroup>
+
+  <Import Project="Unity3D.props" />
+  <PropertyGroup Label="Unity3D">
+    <UnityVersion>2020.3.17f1</UnityVersion>
+    <UnityEditor>$(UnityInstallRoot)\$(UnityVersion)\$(UnityEditorPath)</UnityEditor>
+    <UnityEngine>$(UnityInstallRoot)\$(UnityVersion)\$(UnityEnginePath)</UnityEngine>
+  </PropertyGroup>
+
+  <PropertyGroup Label="Tests">
+    <DefaultTestTargetFramework>net472</DefaultTestTargetFramework>
+  </PropertyGroup>
+
+  <ItemGroup Label="Tests">
+    <PackageReference Update="xunit.runner.visualstudio">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Update="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
