--- a/Tests/PerformanceTests/PerformanceTests.csproj
+++ b/Tests/PerformanceTests/PerformanceTests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
     <OutputType>Exe</OutputType>
+    <TargetFramework>$(DefaultNetTargetFramework)</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
